# Fakturant

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
lib/wxWidgets/: CMakeLists.txt
src/: CMakeLists.txt  Util.cpp  Util.hpp  main.cpp
src/gui/: Application.cpp  Application.hpp
src/gui/frame/: Main.cpp  Main.hpp
test/: CMakeLists.txt  test_Util.cpp
